# hs-ipfs-client

./: .travis.yml  LICENSE  README.md  ipfs-client.cabal  stack.yaml
src/IPFS/: Client.hs
src/Network/: IPFS.hs
src/Network/IPFS/: Client.hs  Types.hs
test/: test.hs
